--- a/app/src/main/res/layout/filter_activity.xml
+++ b/app/src/main/res/layout/filter_activity.xml
@@ -30,6 +30,20 @@
         app:layout_constraintStart_toStartOf="parent"
          />
 
+
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="24dp"
+        android:layout_height="26dp"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:src="@drawable/back"
+        app:layout_constraintBottom_toTopOf="@+id/customer_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.206"
+        />
+
     <TextView
         android:id="@+id/rotationDegree"
         android:layout_width="wrap_content"
