--- a/app/src/main/res/drawable/activity_background.xml
+++ b/app/src/main/res/drawable/activity_background.xml
@@ -3,9 +3,9 @@
 <item>
     <shape>
         <gradient
-            android:angle="160"
-            android:startColor="#ddd6f3"
-            android:endColor="#faaca8"
+            android:angle="90"
+            android:startColor="#d7d2cc"
+            android:endColor="#304352"
             android:type="linear"
             />
     </shape>
