--- a/app/src/main/res/layout/filter_activity.xml
+++ b/app/src/main/res/layout/filter_activity.xml
@@ -9,14 +9,15 @@
 
     <ImageView
         android:id="@+id/customer_image"
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="500dp"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.151"
+        app:layout_constraintVertical_bias="0.181"
         app:srcCompat="@android:drawable/ic_menu_gallery" />
 
     <ImageButton
@@ -74,28 +75,50 @@
 
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="24dp"
-        android:layout_height="26dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/back"
-        app:layout_constraintBottom_toTopOf="@+id/customer_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.012"
+        app:layout_constraintEnd_toStartOf="@+id/saveButton"
+        app:layout_constraintHorizontal_bias="0.047"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/saveButton"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/save_image"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.958"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/undo"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:src="@drawable/undo"
+        app:layout_constraintEnd_toStartOf="@+id/saveButton"
+        app:layout_constraintHorizontal_bias="0.438"
+        app:layout_constraintStart_toStartOf="@+id/backButton"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/redoButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:src="@drawable/forward"
+        app:layout_constraintEnd_toEndOf="@+id/saveButton"
+        app:layout_constraintHorizontal_bias="0.564"
+        app:layout_constraintStart_toEndOf="@+id/backButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -103,7 +126,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="0°"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -116,8 +138,6 @@
         android:id="@+id/rotationBar"
         android:layout_width="180dp"
         android:layout_height="35dp"
-        android:max="180"
-        android:min="-180"
         android:progress="0"
         android:progressTint="#ff901b"
         android:thumbTint="#ff901b"
