--- a/app/src/main/res/layout/filter_activity.xml
+++ b/app/src/main/res/layout/filter_activity.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/customer_image"
         android:layout_width="wrap_content"
-        android:layout_height="500dp"
+        android:layout_height="450dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -68,14 +68,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/effectsMenu"
         android:layout_width="wrap_content"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toTopOf="@+id/rotationDegree"
-        app:layout_constraintVertical_bias="0.9" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
         android:id="@+id/backButton"
@@ -146,13 +147,16 @@
         android:progress="0"
         android:progressTint="#ff901b"
         android:thumbTint="#ff901b"
+
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+
+        app:layout_constraintBottom_toTopOf="@+id/AffineTextInfo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/customer_image"
-        app:layout_constraintVertical_bias="0.129" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.977" />
 
     <ImageView
         android:id="@+id/firstTriangle"
@@ -243,12 +247,12 @@
         android:id="@+id/AffineStart"
         android:layout_width="45dp"
         android:layout_height="60dp"
-        android:visibility="invisible"
         android:layout_marginTop="8dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/start"
         android:background="@drawable/item_background"
         android:scaleType="fitCenter"
+        android:src="@drawable/start"
+        android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/secondTriangle"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toEndOf="@+id/firstTriangle"
