--- a/app/src/main/res/layout/filter_activity.xml
+++ b/app/src/main/res/layout/filter_activity.xml
@@ -32,7 +32,7 @@
         android:src="@drawable/error"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/effectsMenu"
-        app:layout_constraintEnd_toStartOf="@+id/rotationBar"
+        app:layout_constraintEnd_toStartOf="@+id/filterBar"
         app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/customer_image"
@@ -50,7 +50,7 @@
         app:layout_constraintBottom_toTopOf="@+id/effectsMenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.789"
-        app:layout_constraintStart_toEndOf="@+id/rotationBar"
+        app:layout_constraintStart_toEndOf="@+id/filterBar"
         app:layout_constraintTop_toBottomOf="@+id/customer_image"
         app:layout_constraintVertical_bias="0.263" />
 
@@ -62,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/rotationDegree"
+        app:layout_constraintTop_toTopOf="@+id/filterBarProgress"
         app:layout_constraintVertical_bias="1.0" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -75,7 +75,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
 
-        app:layout_constraintTop_toTopOf="@+id/rotationDegree"
+        app:layout_constraintTop_toTopOf="@+id/filterBarProgress"
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
@@ -127,7 +127,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/rotationDegree"
+        android:id="@+id/filterBarProgress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -137,11 +137,11 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rotationBar" />
+        app:layout_constraintTop_toBottomOf="@+id/filterBar" />
 
 
     <SeekBar
-        android:id="@+id/rotationBar"
+        android:id="@+id/filterBar"
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:progress="0"
@@ -153,10 +153,40 @@
 
         app:layout_constraintBottom_toTopOf="@+id/AffineTextInfo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.977" />
+        app:layout_constraintVertical_bias="0.959" />
+
+    <SeekBar
+        android:id="@+id/retouchCoeffBar"
+        android:layout_width="180dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="8dp"
+        android:progress="0"
+
+        android:progressTint="#ff901b"
+
+
+        android:thumbTint="#ff901b"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/effectsMenu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/filterBar"
+        app:layout_constraintVertical_bias="0.352" />
+
+    <TextView
+        android:id="@+id/retouchBarProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/retouchCoeffBar" />
 
     <ImageView
         android:id="@+id/firstTriangle"
